Fix footer text on mobile

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -305,6 +305,7 @@ input:-webkit-autofill:active {
   #footer {
     padding-top: 50px;
     font-size: 12px;
+    position: static;
   }
 }
 
